# parkVar

./: .gitignore  Dockerfile  LICENSE.txt  README.md  anno_data.csv  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
docs/: FOR_THE_ASSESORS.md  INSTALLATION.md  TECHNICAL_MANUAL.md  USER_MANUAL.md
parkVar/: main.py
parkVar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
parkVar/modules/: clinvar_annotator.py  flask_app.py  test.py  validate.py
parkVar/utils/: anno_helpers.py  filter_helpers.py  flask_utils.py  logger_config.py  upload_helpers.py
tests/: test_anno_helpers.py  test_annotate.py  test_filter_helpers.py  test_flask_app.py  test_flask_utils.py  test_logger_config.py  test_upload_helpers.py  test_validate.py
tests/test_data/: genomic_var_error_vv_response.json  two_transcript_error_vv_response.json  valid_vv_response.json
