[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "parkVar"
description = "A tool to annotate variants from a Parkinson's NGS Panel"
authors = [{ name = "Emily" }, {name = "Andy"}, {name = "Greg"}]
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ['.']

[tool.setuptools.dynamic]
version = { attr = 'parkVar.__version__' }
dependencies = { file = ['requirements.txt'] }