[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "parkVar"
description = "A tool to annotate variants from a Parkinson's NGS Panel"
authors = [{ name = "Emily" }, {name = "Andy"}, {name = "Greg"}]
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ['.']

[tool.setuptools.dynamic]
version = { attr = 'parkVar.__version__' }
dependencies = { file = ['requirements.txt'] }

[tool.ruff]
# Set the maximum line length (PEP 8 recommends 79
# https://peps.python.org/pep-0008/#maximum-line-length
line-length = 79

# Select specific rules to enforce (errors (E), warnings (W), and imports
# warnings (I), quotes (Q000))
lint.select = ["E", "W", "I", "Q000"]


# Disable autofix by default (users must manually apply fixes)
fix = false